--- a/spring/ApiDemo/src/main/resources/application.properties
+++ b/spring/ApiDemo/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=ApiDemo
+spring.datasource.url = jdbc:mysql://localhost:3306/drubatch1
+spring.datasource.username = root
+spring.datasource.password= 8438
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql= true
