--- a/spring/ApiDemo/src/main/resources/application.properties
+++ b/spring/ApiDemo/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username = root
 spring.datasource.password= 8438
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql= true
+
