--- a/spring/ApiDemo/src/main/resources/application.properties
+++ b/spring/ApiDemo/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password= 8438
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.format_sql= true
-
+spring.jpa.hibernate.ddl-auto=create
