--- a/microservices/eurekaServer/eurekaServer/src/main/resources/application.properties
+++ b/microservices/eurekaServer/eurekaServer/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=eurekaServer
 server.port = 8761
+# stop acting as a eureka client
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false 
