--- a/swaggerInitalDemo/swaggerInitalDemo/src/main/resources/application.properties
+++ b/swaggerInitalDemo/swaggerInitalDemo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=swaggerInitalDemo
+spring.datasource.url = jdbc:mysql://localhost:3306/drubatch1
+spring.datasource.username = root
+spring.datasource.password= 8438
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.hibernate.ddl-auto=create
