--- a/jdbcSpringDemo/jdbcSpringDemo/src/main/resources/application.properties
+++ b/jdbcSpringDemo/jdbcSpringDemo/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=jdbcSpringDemo
+
+spring.datasource.url = jdbc:mysql://localhost:3306/drubatch1
+spring.datasource.username= root
+spring.datasource.password = 8438
+spring.datasource.generate-unique-name=false
