--- a/resilience4j/catalogService/catalogService/src/main/resources/application.properties
+++ b/resilience4j/catalogService/catalogService/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=catalogService
+server.port = 9191
+spring.datasource.url = jdbc:mysql://localhost:3306/drubatch1
+spring.datasource.username = root
+spring.datasource.password= 8438
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.hibernate.ddl-auto=update
